--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,11 @@
 <script src="components/statistics/d3/d3.js" charset="UTF-8"></script>
 <script src="components/statistics/StatisticsCtrl.js" charset="UTF-8"></script>
 <script src="components/statistics/chart.js"></script>
+
+<!-- worcloud -->
+<script src="components/statistics/wordcloud/d3-wordcloud-decorator.js"></script>
+<script src="components/statistics/wordcloud/wordcloud-directive.js"></script>
+
 <!-- endbuild -->
 
 <script src="@@configfile"></script>
