works, not output with rest

--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,7 @@
 
 <!-- statistics -->
 <script src="components/statistics/d3/d3.js" charset="UTF-8"></script>
+<script src="components/statistics/StatisticsService.js" charset="UTF-8"></script>
 <script src="components/statistics/StatisticsCtrl.js" charset="UTF-8"></script>
 <script src="components/statistics/chart.js"></script>
 
