--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" type="text/css" href="styles/main.css" media="screen, print"/>
+  <link rel="stylesheet" href="components/statistics/barchart/bar.css"/>
   <!-- endbuild -->
 </head>
 
