changing chart-js wrapper to angular-chart.js

--- a/app/index.html
+++ b/app/index.html
@@ -152,8 +152,8 @@
 
 <!-- barchart -->
 <script src="components/statistics/barchart/Chart.min.js"></script>
-<!--<script src="components/statistics/barchart/angular-chart.min.js"></script>-->
-<script src="components/statistics/barchart/angles.js"></script>
+<script src="components/statistics/barchart/angular-chart.min.js"></script>
+<!--<script src="components/statistics/barchart/angles.js"></script>-->
 <script src="components/statistics/BarCtrl.js"></script>
 
 <!-- endbuild -->
